--- a/package.json
+++ b/package.json
@@ -1,50 +1,72 @@
 {
-  "name": "luxon-angular",
+  "name": "luxon-angular-pipes",
   "license": "MIT",
-  "private": true,
+  "private": "true",
+  "keywords": [
+    "luxon",
+    "angular",
+    "date",
+    "time",
+    "datetime",
+    "immutable"
+  ],
+  "homepage": "https://github.com/alex-vg/luxon-angular-pipes#readme",
+  "bugs": "https://github.com/alex-vg/luxon-angular-pipes/issues",
+  "repository": "github:alex-vg/luxon-angular-pipes",
+  "contributors": [
+    {
+      "name": "Dan Stelljes",
+      "email": "dan@stellj.es",
+      "url": "https://stellj.es"
+    },
+    {
+      "name": "alex-vg"
+    }
+  ],
+  "peerDependencies": {
+    "luxon": ">=2.0.0 <4"
+  },
   "scripts": {
     "ng": "ng",
     "build": "ng build",
     "lint": "ng lint",
     "test": "ng test"
   },
-  "dependencies": {
-    "@angular/animations": "14.1.0",
-    "@angular/common": "14.1.0",
-    "@angular/compiler": "14.1.0",
-    "@angular/core": "14.1.0",
-    "@angular/forms": "14.1.0",
-    "@angular/platform-browser": "14.1.0",
-    "@angular/platform-browser-dynamic": "14.1.0",
-    "@angular/router": "14.1.0",
+  "devDependencies": {
+    "@angular/animations": "14.2.7",
+    "@angular/common": "14.2.7",
+    "@angular/compiler": "14.2.7",
+    "@angular/core": "14.2.7",
+    "@angular/forms": "14.2.7",
+    "@angular/platform-browser": "14.2.7",
+    "@angular/platform-browser-dynamic": "14.2.7",
+    "@angular/router": "14.2.7",
     "luxon": "3.0.1",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
-    "zone.js": "0.11.7"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.0",
+    "zone.js": "0.11.7",
+    "@angular-builders/jest": "^14.0.1",
+    "@angular-devkit/build-angular": "14.2.6",
     "@angular-eslint/builder": "14.0.2",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "14.1.0",
-    "@angular/compiler-cli": "14.1.0",
-    "@angular/language-service": "14.1.0",
+    "@angular/cli": "14.2.6",
+    "@angular/compiler-cli": "14.2.7",
+    "@angular/language-service": "14.2.7",
     "@types/jasmine": "4.0.3",
     "@types/jasminewd2": "2.0.10",
+    "@types/jest": "^29.2.0",
     "@types/luxon": "3.0.0",
     "@types/node": "18.6.3",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
+    "glob": "^8.0.3",
     "jasmine-core": "4.3.0",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.4.0",
-    "karma-chrome-launcher": "3.1.1",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "5.1.0",
-    "karma-jasmine-html-reporter": "2.0.0",
+    "jest": "^29.2.1",
+    "jest-preset-angular": "^12.2.2",
     "ng-packagr": "14.1.0",
     "protractor": "7.0.0",
     "ts-node": "10.9.1",
