--- a/package.json
+++ b/package.json
@@ -33,27 +33,23 @@
     "test": "ng test"
   },
   "devDependencies": {
-    "@angular/animations": "14.2.7",
-    "@angular/common": "14.2.7",
-    "@angular/compiler": "14.2.7",
-    "@angular/core": "14.2.7",
-    "@angular/forms": "14.2.7",
-    "@angular/platform-browser": "14.2.7",
-    "@angular/platform-browser-dynamic": "14.2.7",
-    "@angular/router": "14.2.7",
-    "luxon": "3.0.1",
-    "rxjs": "7.5.6",
-    "tslib": "2.4.0",
-    "zone.js": "0.11.7",
     "@angular-builders/jest": "^14.0.1",
     "@angular-devkit/build-angular": "14.2.6",
     "@angular-eslint/builder": "14.0.2",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
+    "@angular/animations": "14.2.7",
     "@angular/cli": "14.2.6",
+    "@angular/common": "14.2.7",
+    "@angular/compiler": "14.2.7",
     "@angular/compiler-cli": "14.2.7",
+    "@angular/core": "14.2.7",
+    "@angular/forms": "14.2.7",
     "@angular/language-service": "14.2.7",
+    "@angular/platform-browser": "14.2.7",
+    "@angular/platform-browser-dynamic": "14.2.7",
+    "@angular/router": "14.2.7",
     "@types/jasmine": "4.0.3",
     "@types/jasminewd2": "2.0.10",
     "@types/jest": "^29.2.0",
@@ -65,11 +61,15 @@
     "glob": "^8.0.3",
     "jasmine-core": "4.3.0",
     "jasmine-spec-reporter": "7.0.0",
-    "jest": "^29.2.1",
+    "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
+    "luxon": "3.0.1",
     "ng-packagr": "14.1.0",
     "protractor": "7.0.0",
+    "rxjs": "7.5.6",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "tslib": "2.4.0",
+    "typescript": "4.7.4",
+    "zone.js": "0.11.7"
   }
 }
